# ftp-analyzer

./: .gitignore  CMakeLists.txt  README.md  README_.md  old_main.cpp
docs/: CPP_CONCEPTS.md  GUIDE.md  project.md
src/: ftp_parser.cpp  ftp_parser.h  link_layer.cpp  link_layer.h  main.cpp  pcap_reader.cpp  pcap_reader.h  session_manager.h  tcp_reassembly.cpp  tcp_reassembly.h
